--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-Look at me, I have a website now, very cool!>
+Look at me, I have a website now, very cool!
+Changes have been made
 </body>
 </html>
